Finish article first draft